--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@ title                    : "Blogtest"
 title_separator          : "-"
 name                     : "CHO"
 description              : "SSAFY"
-url                      : "https://hyeonincho.github.io/blogtest/"
-baseurl                  : # the subpath of your site, e.g. "/blog"
+url                      : "https://hyeonincho.github.io"
+baseurl                  : "/blogtest"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 # breadcrumbs            : false # true, false (default)
